--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
-
+01-Getaround_analysis.ipynb
 # Distribution / packaging
 .Python
 build/
@@ -25,6 +25,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*.csv
+Dockerfile
+*.xlsx
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
